# CompileScripts

./: Android.mk  Application.mk  CMakeLists.txt  GamesAPK.sh  GamesLinux.sh  Makefile  apk.sh  cmake.sh  cmakeAll.sh  cmakeAllSys.sh  cmakeGame.sh  cmakeLinux.sh  compileTest.sh  make.sh  makeGame.sh  mingw32-make.sh  ndkBuild.sh  ndkBuildGame.sh  shell.sh  shred.sh
